<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:background="#27282D"
    tools:context=".ui.FragmentCleanAnim">
    <com.google.android.gms.ads.AdView
        android:id="@+id/av_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:adSize="@string/banner_size"
        ads:adUnitId="@string/banner_id">
    </com.google.android.gms.ads.AdView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/av_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#27282D"
        app:layout_constraintHeight_percent="0.08"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_top"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
    </com.google.android.material.card.MaterialCardView>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/clean"
        android:scaleX="2"

        android:scaleY="2"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>