<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#27282D"
    xmlns:wave="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FragmentUltraPowerSaving">
    <com.google.android.gms.ads.AdView
        android:id="@+id/av_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:adSize="@string/banner_size"
        app:adUnitId="@string/banner_id"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/av_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.5"
        android:id="@+id/cgl_battery"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.65"
        android:id="@+id/cgl_ultrapowertext"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.75"
        android:id="@+id/cgl_ultrapower_button"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/red_ellipse"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="@+id/crpv_progress"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/crpv_progress"
        app:layout_constraintStart_toStartOf="@+id/crpv_progress"
        app:layout_constraintTop_toTopOf="@+id/crpv_progress"
        app:layout_constraintWidth_percent="1"
        />
    <com.timqi.sectorprogressview.ColorfulRingProgressView
        android:id="@+id/crpv_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_layout_background"
     app:layout_constraintBottom_toTopOf="@+id/cgl_battery"
        app:layout_constraintWidth_percent="0.7"
app:percent="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:bgColor="#2E3037"
        app:fgColorEnd="#EE7048"
        app:fgColorStart="#EE4856"
        app:startAngle="0"
        app:strokeWidth="15dp"

        />
    <View
        android:layout_width="20dp"
        android:id="@+id/v_center"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/crpv_progress"
        app:layout_constraintEnd_toEndOf="@+id/crpv_progress"
        app:layout_constraintTop_toTopOf="@+id/crpv_progress"
        app:layout_constraintBottom_toBottomOf="@+id/crpv_progress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/crpv_progress"
        app:layout_constraintEnd_toEndOf="@+id/crpv_progress"
        app:layout_constraintBottom_toTopOf="@+id/v_center"
        android:textColor="@color/white"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#27282D"
        app:layout_constraintHeight_percent="0.08"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extreme_power_saving"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:id="@+id/tv_hours_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/crpv_progress"
        app:layout_constraintEnd_toEndOf="@+id/crpv_progress"
     app:layout_constraintTop_toBottomOf="@+id/v_center"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extremepowermode"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:id="@+id/tv_ultrapowertext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgl_ultrapowertext"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_do_it"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        android:text="@string/doit"
        android:background="@drawable/optimize_button"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgl_ultrapower_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>