<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27282D"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView
        android:id="@+id/av_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:adSize="@string/banner_size"
        app:adUnitId="@string/banner_id"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/av_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_bottom"
        app:layout_constraintGuide_percent="0.9"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#27282D"
        app:layout_constraintHeight_percent="0.08"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extreme_power_saving"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
    </com.google.android.material.card.MaterialCardView>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_top"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/start"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/end"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_first_text"
        app:layout_constraintGuide_percent="0.55"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_second_text"
        app:layout_constraintGuide_percent="0.62"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_third_text"
        app:layout_constraintGuide_percent="0.69"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_fourth_text"
        app:layout_constraintGuide_percent="0.76"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/cgl_fifth_text"
        app:layout_constraintGuide_percent="0.83"
        />
    <com.timqi.sectorprogressview.ColorfulRingProgressView
        android:id="@+id/crpv_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cgl_top"
        app:layout_constraintWidth_percent="0.7"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:bgColor="#2E3037"
        app:fgColorEnd="#EE7048"
        app:percent="75"
        app:fgColorStart="#EE4856"
        app:startAngle="0"
        app:strokeWidth="15dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/crpv_progress"
        app:layout_constraintEnd_toEndOf="@+id/crpv_progress"
        app:layout_constraintTop_toTopOf="@+id/crpv_progress"
        app:layout_constraintBottom_toBottomOf="@+id/crpv_progress"
        android:id="@+id/tv_normal_mode_percent"
        android:text="0"
        android:textSize="36sp"
        android:textColor="@color/white"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/iv_done"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_done_icon"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cgl_first_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cgl_first_text"
        app:layout_constraintStart_toEndOf="@+id/iv_done"
        android:layout_marginStart="10dp"
        android:text="@string/decrease_cpu"
        android:textColor="#B1B1B4"
        android:id="@+id/tv_first_text"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/iv_done_second"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_done_icon"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cgl_second_text"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cgl_second_text"
        app:layout_constraintStart_toEndOf="@+id/iv_done"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginStart="10dp"
        android:text="@string/decrease_cpu_anim"
        android:textColor="#B1B1B4"
        android:id="@+id/tv_second_text"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/iv_done_third"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_done_icon"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cgl_third_text"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cgl_third_text"
        app:layout_constraintStart_toEndOf="@+id/iv_done"
        android:layout_marginStart="10dp"
        app:layout_constraintWidth_percent="0.7"
        android:text="@string/closing_apps"
        android:textColor="#B1B1B4"
        android:id="@+id/tv_third_text"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/iv_done_fourth"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_done_icon"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cgl_fourth_text"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@+id/cgl_fourth_text"
        app:layout_constraintStart_toEndOf="@+id/iv_done"
        android:layout_marginStart="10dp"
        android:text="@string/blocking_apps"
        android:textColor="#B1B1B4"
        android:id="@+id/tv_fourth_text"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/iv_done_fifth"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_done_icon"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cgl_fifth_text"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@+id/cgl_fifth_text"
        app:layout_constraintStart_toEndOf="@+id/iv_done_fifth"
        android:layout_marginStart="10dp"
        android:text="@string/closing_apps_next"
        android:textColor="#B1B1B4"
        android:id="@+id/tv_fifth_text"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>