<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#27282D"
    xmlns:wave="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FragmentUltraPowerSaving">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_battery_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/waveLoadingView"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#27282D"
        app:layout_constraintHeight_percent="0.08"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultrapowersaving"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
    </com.google.android.material.card.MaterialCardView>
    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:wlv_borderWidth="10dp"
        app:wlv_borderColor="#CDF1FC"
        app:wlv_progressValue="40"
        app:wlv_shapeType="square"
app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cgl_battery"
app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.4"
        app:wlv_waveAmplitude="10"

        app:wlv_waveColor="#E97244"/>
<!--<com.google.android.material.card.MaterialCardView-->
<!--    android:layout_width="0dp"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintBottom_toTopOf="@+id/cgl_battery"-->
<!--    android:layout_height="0dp"-->
<!--    app:cardBackgroundColor="#27282D"-->
<!--    app:layout_constraintHeight_percent="0.4"-->
<!--    app:layout_constraintWidth_percent="0.4"-->
<!--    >-->
<!--    -->
<!--</com.google.android.material.card.MaterialCardView>-->

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.55"
        android:id="@+id/cgl_battery"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.65"
        android:id="@+id/cgl_ultrapowertext"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        wave:layout_constraintGuide_percent="0.75"
        android:id="@+id/cgl_ultrapower_button"
        />
<!--<ImageView-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_height="0dp"-->
<!--    android:src="@drawable/ic_icon_battery"-->
<!--    wave:layout_constraintStart_toStartOf="parent"-->
<!--    wave:layout_constraintEnd_toEndOf="parent"-->
<!--    wave:layout_constraintBottom_toTopOf="@+id/cgl_battery"-->
<!--    wave:layout_constraintHeight_percent="0.4"-->
<!--   wave:layout_constraintDimensionRatio="1:1"-->
<!--    />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultrapowertext"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:id="@+id/tv_ultrapowertext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgl_ultrapowertext"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton_do_it"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        android:text="@string/doit"
        android:background="@drawable/optimize_button"
       app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgl_ultrapower_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>